# truth-training

./: .gitignore  CHANGELOG.md  Cargo-android.toml  Cargo-minimal.toml  Cargo.toml  README.md  SECURITY.md  SPEC_SUMMARY.md  command.txt  test_new_features.db  truth_db.sqlite  truth_training.db
.cargo/: config.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: android-build.yml  build-android.yml  cross-platform.yml  desktop.yml  ios-build.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
android-build/src/: lib.rs
app/: Cargo.toml  status.db  status2.db  test.db  truth.db
app/src/: cli.rs  config_utils.rs  diagnostics.rs  main.rs  status_utils.rs
app/tests/: truthctl_config_test.rs  truthctl_diagnose_test.rs  truthctl_init_node_test.rs  truthctl_keygen_test.rs  truthctl_logs_test.rs  truthctl_peers_test.rs  truthctl_smoke.rs  truthctl_status_test.rs
core/: Cargo.toml
core-lib/: Cargo.toml
core-lib/src/: expert_simple.rs  knowledge.rs  lib.rs  models.rs  storage.rs  sync.rs  trust_propagation.rs
core/src/: auth.rs  lib.rs  models.rs  storage.rs  trust_propagation.rs
core/src/collective_intelligence/: consensus.rs  judgment.rs  mod.rs  models.rs  reputation.rs
docs/: .~lock.Data Schema.doc#  ARCHITECTURE.md  CLI_Usage.md  Concept_Collective_Intelligence.md  Data_Schema.doc  Data_Schema.md  Technical_Specification.doc  Technical_Specification.md  architecture.md  build_instructions.md  discrepancies_report.md  event_rating_protocol.md  p2p_release.md  ui_guidelines.md
docs/api_reference/: API_REFERENCE.md
docs_ru/: Collective_Intelligence.md
integration/android/: README_BUILD_ANDROID.md  README_INTEGRATION.md  mod.rs  verify_json.rs
integration/android/sample_responses/: graph.json  info.json  stats.json
integration/desktop/: README_INTEGRATION.md
integration/ios/: README_INTEGRATION.md
keys/: node1.json
minimal-build/: Cargo.toml
platform/: Cargo.toml
scripts/: build-android.sh
spec/: 01-product-vision.md  02-requirements.md  03-architecture.md  04-data-model.md  05-api.md  06-expert-system.md  07-event-rating-protocol.md  08-p2p-sync.md  09-ux-guidelines.md  10-cli.md  10-roadmap.md  11-decision-log.md  12-open-questions.md  13-traceability.md  14-quality-gates.md  15-prompts-and-automation.md  16-test-plan.md  17--offline-reliability.md  17-offline-reliability.md  18-cross-platform-architecture.md  19-build-instructions.md  20-cargo-configuration.md  21-roadmap.md  README.md
specs/001-collective-intelligence-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-collective-intelligence-layer/contracts/: consensus-api.yaml  judgments-api.yaml  reputation-api.yaml
specs/002-ui-desktop-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-desktop-integration/contracts/: api.yaml
src/: android_minimal.rs  api.rs  db.rs  expert.rs  lib.rs  main.rs  models.rs  net.rs  server_diagnostics.rs  sync.rs
src/android/: mod.rs  verify_json.rs
src/p2p/: encryption.rs  mod.rs  node.rs  sync.rs
tests/: android_bridge.rs  android_verify.rs  api_push.rs  cli_sync.rs
tests/collective_intelligence/: consensus_tests.rs  judgment_tests.rs  reputation_tests.rs  test_consensus_flow.rs  test_judgment_flow.rs  test_reputation_flow.rs
tests/contract/: test_consensus_calculate.rs  test_consensus_get.rs  test_judgments_get.rs  test_judgments_post.rs  test_reputation_get.rs  test_reputation_leaderboard.rs
truth-android-client/: README.md  README_ANDROID.md  build.gradle.kts  settings.gradle.kts
truth-android-client/app/: build.gradle.kts  proguard-rules.pro
truth-android-client/app/src/main/: AndroidManifest.xml
truth-android-client/app/src/main/res/drawable/: ic_launcher_foreground.xml
truth-android-client/app/src/main/res/layout/: activity_dashboard.xml  activity_json_test.xml  activity_login.xml  activity_main.xml  activity_main_dashboard.xml  activity_p2p.xml  activity_push_test.xml
truth-android-client/app/src/main/res/values/: colors.xml  strings.xml
truth-android-client/docs/: INTEGRATION_TRUTH_CORE.md
truth-android-client/truthcore_api/: api_reference_link.md
truth-ios-client/: README.md
truth-ios-client/TruthTraining/: ContentView.swift  TruthCore-Bridging-Header.h  TruthCore.swift  TruthTrainingApp.swift  truth_core.h
ui-tui/: Cargo.toml
ui-web/: Cargo.toml
ui/desktop/: .eslintrc.cjs  .keep  CHANGELOG.md  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/desktop/src/: App.tsx  setupTests.ts  vite-env.d.ts
ui/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/desktop/src-tauri/src/: commands.rs  main.rs
ui/desktop/src-tauri/src/commands/: events.rs  judgments.rs
ui/desktop/src/components/Dashboard/: CreateEventButton.tsx  EventCard.tsx
ui/desktop/src/components/JudgmentPanel/: JudgmentCard.tsx
ui/desktop/src/components/__tests__/: SyncStatus.test.tsx
ui/desktop/src/components/system/: ErrorBoundary.tsx  SyncStatus.tsx  ThemeProvider.tsx  Toaster.tsx
ui/desktop/src/config/: env.ts
ui/desktop/src/i18n/: index.ts
ui/desktop/src/pages/: Dashboard.tsx  Events.tsx  Judgments.tsx  Settings.tsx
ui/desktop/src/services/: api.ts  errorHandler.ts  offline.ts  performance.ts  sync.ts  theme.ts
ui/desktop/src/services/__tests__/: api.test.ts
ui/desktop/src/stores/: events.ts  judgments.ts  sync.ts
ui/desktop/src/stores/__tests__/: events.test.ts
ui/desktop/src/types/: api.ts  events.ts  judgments.ts
ui/desktop/tests/contract/: consensus-calc.test.ts  consensus-get.test.ts  event-get.test.ts  events-create.test.ts  events-list.test.ts  judgments-create.test.ts  judgments-list.test.ts  sync.test.ts
ui/desktop/tests/e2e/: dashboard.spec.ts  events.spec.ts
ui/desktop/tests/integration/: api-integration.test.ts  create-event-flow.test.ts  dashboard-flow.test.ts  ffi-bridge.test.ts  judgment-flow.test.ts  offline-sync-flow.test.ts
ui/desktop/tests/performance/: api-performance.test.ts
(+32 files in other folders)
