[package]
name = "truth_core"
version = "0.2.4-pre"
edition = "2021"

[lib]
name = "truth_core"
path = "src/lib.rs"

[workspace]
members = ["app","core-lib","platform","ui-tui","ui-web"]
resolver = "2"

[features]
# Включает клиентские вызовы p2p синхронизации (push/pull) и вспомогательные функции
p2p-client-sync = []

auth = []

[dependencies]
core_lib = { version = "0.2.4-pre", path = "core-lib" }
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
once_cell = "1.19"
anyhow = "1.0"
get_if_addrs = "0.5"
r2d2 = "0.8"
r2d2_sqlite = "0.24.0"
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
log = "0.4"
env_logger = "0.11"
base64ct = "=1.7.3"
sha2 = "0.10"
thiserror = "1.0"
jsonwebtoken = "9"

# OpenAPI / Swagger UI for actix-web
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
