[package]
name = "truth_core"
version = "0.3.0"
description = "Stable foundation release with adaptive trust propagation, P2P analytics, and Android integration."
edition = "2021"

[lib]
name = "truth_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["app","core-lib","platform","ui-tui","ui-web"]
resolver = "2"

[features]
# Включает клиентские вызовы p2p синхронизации (push/pull) и вспомогательные функции
p2p-client-sync = []

auth = []

[dependencies]
core_lib = { version = "0.3.0", path = "core-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
anyhow = "1.0"
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
log = "0.4"
base64ct = "=1.7.3"
sha2 = "0.10"
thiserror = "1.0"
jni = "0.21"
base64 = "0.22"

# Web server dependencies (excluded for Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
get_if_addrs = "0.5"
r2d2 = "0.8"
r2d2_sqlite = "0.24.0"
env_logger = "0.11"
jsonwebtoken = "9"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
getrandom = { version = "0.2", features = ["std"] }

# OpenAPI / Swagger UI for actix-web
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
