[package]
name = "truth_core"
version = "0.4.0-pre"
description = "Stable foundation release with adaptive trust propagation, P2P analytics, and Android integration."
authors = ["ekwator"]
license = "MIT"
repository = "https://github.com/ekwator/truth-training"
edition = "2021"

[lib]
name = "truth_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[workspace]
members = ["app","core","ui/desktop/src-tauri"]
resolver = "2"

[features]
default = []
# Desktop/mobile feature flags per Spec-Kit
desktop = [
  "dep:actix-web",
  "dep:actix-cors",
  "dep:tokio",
  "dep:reqwest",
  "dep:clap",
  "dep:get_if_addrs",
  "dep:r2d2",
  "dep:r2d2_sqlite",
  "dep:env_logger",
  "dep:jsonwebtoken",
  "dep:utoipa",
  "dep:utoipa-swagger-ui",
]
mobile = [
  "dep:jni"
]
# Existing feature flags retained
p2p-client-sync = []
auth = []

[dependencies]
core_lib = { version = "0.4.0-pre", path = "core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
anyhow = "1.0"
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
log = "0.4"
base64ct = "=1.7.3"
sha2 = "0.10"
thiserror = "1.0"
base64 = "0.22"

# Optional deps for feature-gated builds
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.6", optional = true }
tokio = { version = "1.37", features = ["full"], optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
get_if_addrs = { version = "0.5", optional = true }
r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "0.24.0", optional = true }
env_logger = { version = "0.11", optional = true }
jsonwebtoken = { version = "9", optional = true }
utoipa = { version = "4", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "5", features = ["actix-web"], optional = true }
jni = { version = "0.21", optional = true }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
getrandom = { version = "0.2", features = ["std"] }

 
