[package]
name = "app"
version = "0.2.2-pre"
edition = "2021"

[dependencies]
core_lib = { path = "../core-lib" }
truth_core = { path = ".." }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
dirs = "5"

[features]
default = []
p2p-client-sync = ["truth_core/p2p-client-sync"]

[[bin]]
name = "truthctl"
path = "src/bin/truthctl.rs"

[dev-dependencies]
ed25519-dalek = "2"
hex = "0.4"
