[package]
name = "app"
version = "0.4.0-pre"
description = "Stable foundation release with adaptive trust propagation, P2P analytics, and Android integration."
edition = "2021"

[dependencies]
core_lib = { path = "../core", version = "0.4.0-pre" }
truth_core = { path = "..", version = "0.4.0-pre", features = ["desktop"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
dirs = "5"
rand = "0.8"
ed25519-dalek = "2"
hex = "0.4"
dialoguer = "0.11"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[features]
p2p-client-sync = ["truth_core/p2p-client-sync"]

[[bin]]
name = "truthctl"
path = "src/bin/truthctl.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
