[package]
name = "core_lib"
version = "0.4.0-pre"
description = "Stable foundation release with adaptive trust propagation, P2P analytics, and Android integration."
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.4", features = ["v4", "serde", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] } # если используешь DateTime
rand = "0.8"
blake3 = "1"
argon2 = "0.5"
ed25519-dalek = "2"
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"

# Exclude problematic dependencies for Android
[target.'cfg(not(target_os = "android"))'.dependencies]
ring = "0.17"
zip = "0.6"
automerge = "0.5"
utoipa = { version = "4" }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
getrandom = { version = "0.2", features = ["std"] }